--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,15 +5,18 @@
   padding: 1rem;
   box-shadow: 5px 5px 5px 3px rgba(0, 0, 0, 0.2);
 }
-@media (max-width: 600px){
+@media (max-width: 600px) {
   .react-calendar {
-    font-size:1rem;
-  width: 80%;}
-  
+    font-size: 1rem;
+    width: 80%;
+  }
 }
 .react-calendar__tile {
   line-height: normal;
 }
-.react-calendar__tile--active,.react-calendar__tile--now,.react-calendar__tile:enabled:hover, .react-calendar__tile:enabled:focus{
+.react-calendar__tile--active,
+.react-calendar__tile--now,
+.react-calendar__tile:enabled:hover,
+.react-calendar__tile:enabled:focus {
   border-radius: 2rem;
 }
