--- a/src/css/calculadora.css
+++ b/src/css/calculadora.css
@@ -1,23 +1,24 @@
 @font-face {
-  font-family: "LCD Ultra";
+  font-family: "LCD";
   font-style: normal;
   font-weight: normal;
-  src: local("LCD Ultra"), url("../assets/fonts/LCD-U___.woff") format("woff");
+  src: local("LCD"), url("../assets/fonts/DS-DIGII.TTF");
 }
 
 .button_calc {
   border: none;
-  background-color: rgb(80, 60, 209);
+  background-color: rgb(112, 158, 94);
   font-size: 24px;
   color: rgb(255, 255, 255);
   font-weight: bold;
   cursor: pointer;
   border-radius: 5rem;
   outline: none;
+  box-shadow: 0 0 6px white;
 }
 
 .button_calc:hover {
-  background-color: rgb(61, 43, 184);
+  background-color: rgba(67, 218, 21, 0.432);
 }
 
 .equals {
@@ -38,27 +39,26 @@
   grid-gap: 10px;
 }
 .screen {
-  font-family: "LCD Ultra";
+  font-family: "LCD";
   height: 100px;
   width: 100%;
   margin-bottom: 10px;
   padding: 0 10px;
-  background-color: #4357692d;
+  background-color: #25c9162d;
   border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  color: white;
-  font-weight: bold;
+  color: rgba(39, 39, 39, 0.76);
   box-sizing: border-box;
 }
 .wrapper {
   margin-top: 3rem;
   margin: 0 auto;
-  width: 340px;
-  height: 540px;
+  width: 400px;
+  height: 600px;
   padding: 10px;
   border-radius: 10px;
   background-color: #485461;
-  background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
+  
 }
